# android-NDK_and_RenderScript

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/uberv/a8_1addingnativebitswithjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/uberv/a8_1addingnativebitswithjni/: BackgroundOverlayView.java  BlurryListActivity.java  HeaderView.java  ImageProcessingActivity.java  MainActivity.java  NativeLib.java  NativeWrapper.java  OverlayFadeDrawable.java  RenderScriptActivity.java
app/src/main/jni/: NativeLib.c  NativeLib.h  activity.c
app/src/main/res/layout/: activity_blurry_list.xml  activity_image_processing.xml  activity_main.xml  activity_render_script.xml
app/src/main/res/menu/: blur.xml
app/src/main/res/values/: strings.xml
app/src/main/rs/: ripple.rs
app/src/test/java/com/example/uberv/a8_1addingnativebitswithjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
